Fixed some menus, added scrollbar color

--- a/Huella_hidrica/styles/styles.css
+++ b/Huella_hidrica/styles/styles.css
@@ -6,11 +6,18 @@
 */
 
 .hero-image {
-    height: 50vh;
+    height: 80vh;
+    position: relative;
+    background-position: center;
 }
 
 .hero-image-content {
     width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .hero-image-title {
